<resources>
    <string name="app_name" translatable="false">FitTrain</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginTitle">SignIn</string>
    <string name="appName">Fit Train</string>
    <string name="register">SignUp</string>
    <string name="login">Login</string>
    <string name="remember">Remember password.</string>
    <string name="cancel">Cancel</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="goLogin">Go sign in</string>
    <string name="sharedpreferences_filename">login</string>
    <string name="jwt_key">JWT_KEY</string>
    <string name="userId">userId</string>
    <string name="incorrect_email">Incorrect email.</string>
    <string name="size_password">Size between 6 and 15</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dashboard_menu">Principal menu</string>
    <string name="title_training">Training list</string>
    <string name="title_gym">Gym list</string>
    <string name="title_profile">My profile</string>
    <string name="title_login">FitTrain Login</string>
    <string name="logoutDialog">¿Do you want to logout?</string>
    <string name="accept">Accept</string>
    <string name="userDates">Fill in your dates</string>
    <string name="userDatesMessage">If you want personal training, fill in your dates in Profile.</string>
    <string name="filter">Filter</string>
    <string name="logout">Logout</string>
    <string name="filterTrainingDialog">Filter training</string>
    <string name="trainingTitleDialog">Training title</string>
    <string name="fillDialog">Fill gaps</string>
    <string name="target">Select target</string>
    <string name="exercises">Exercises</string>
    <string name="height">height</string>
    <string name="emailS">email</string>
    <string name="weight">weight</string>
    <string name="trainingYears">trainingYears</string>
    <string name="description">Description</string>
    <string name="watchExercises">Watch exercises</string>
    <string name="listExercisesActivity">Exercises list</string>
    <string name="trainingDetailsTitle">Training details</string>
    <string name="gymTitleDialog">Name</string>
    <string name="AddressDialog">Address</string>

    <string-array name="targets">
        <item>Everything</item>
        <item>Lost weight</item>
        <item>Keep in weight</item>
        <item>Gaining muscle</item>


    </string-array>
    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>

    </string-array>
    <string name="ready_bt_label">Ready</string>

    <string name="title_activity_maps">Training Map</string>
    <string name="gymDetail">Gym detail</string>
    <string name="Email_example">example@gmail.com</string>
    <string name="edit_profile">Edit</string>
    <string name="changePassword">Change password</string>
    <string name="editProfile">Edit profile</string>
    <string name="years">Years</string>
    <string name="weightProfile">Weight</string>
    <string name="yearsOld">Years old</string>
    <string name="heighProfile">Height</string>
    <string name="genderProfil">Gender</string>
    <string name="trainingYearsProfile">Training years</string>
    <string name="passwordDialog">your password</string>
    <string name="passwordRepeatDialogt">Repeat password</string>
    <string name="changePasswordTitle">Change my password</string>
    <string name="newPass">New password</string>
    <string name="oldPass">Old password</string>
    <string name="saveChanges">Save changes</string>

    <string name="centimeters">Centimeters</string>
    <string name="timeTraining">Time training</string>
    <string name="empty">Empty</string>
    <string name="isNotSame">It is not the same</string>
    <string name="startCountdown">Start countdown</string>
    <string name="cronometer">Cronometer</string>
    <string name="timeToFinish">Time to finish</string>
    <string name="cronoStart">00:00:00</string>

    <string name="trainingTime">Training time</string>
    <string name="obPoints">Get points</string>
    <string name="points">points</string>
    <string name="pointUpper">Points</string>
    <string name="zipcode_prop">Zipcode</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="region_dialog">Region: </string>
    <string name="province_dialog">Province: </string>
    <string name="city_dialog">City: </string>
    <string name="selectDirection">Select direction</string>
    <string name="trainingFilter">Training filter</string>
    <string name="gymFilter">Filter gym</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="minutes">Minutes</string>
    <string name="titleDialogPoints">Obtained points</string>
</resources>
