<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_profile"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:civ_circle_background_color="#00DF6767"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textViewNameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:id="@+id/textViewEmailWrittenEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/Email_example"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameEdit" />

    <Button
        android:id="@+id/btn_save_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:width="170dp"
        android:background="@drawable/roundbtn"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/edit_profile"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailWrittenEdit"
        tools:text="@string/editProfile" />

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:width="170dp"
        android:background="@drawable/roundbtn"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/changePassword"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailWrittenEdit"
        tools:text="@string/changePassword" />

    <TextView
        android:id="@+id/textViewYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/yearsOld"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btn_save_profile"
        app:layout_constraintTop_toBottomOf="@+id/btn_save_profile" />

    <TextView
        android:id="@+id/textViewYearsWrittenEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/textViewYears"
        app:layout_constraintTop_toBottomOf="@+id/textViewYears" />

    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/weightProfile"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewYearsWrittenEdit"
        app:layout_constraintTop_toBottomOf="@+id/textViewYearsWrittenEdit" />

        <TextView
            android:id="@+id/textViewWeightWritten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/textViewWeight"
            app:layout_constraintTop_toBottomOf="@+id/textViewWeight" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/heighProfile"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btn_change_password"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_password" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textViewHeightWritten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/genderProfil"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewHeightWritten"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeightWritten" />

        <TextView
            android:id="@+id/textViewGenderWritten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/textViewGender"
            app:layout_constraintTop_toBottomOf="@+id/textViewGender" />

        <TextView
            android:id="@+id/textViewPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pointUpper"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textViewGenderWritten"
            app:layout_constraintTop_toBottomOf="@+id/textViewGenderWritten" />

        <TextView
            android:id="@+id/textViewTrainingYears"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/trainingYearsProfile"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textViewWeightWritten"
            app:layout_constraintTop_toBottomOf="@+id/textViewWeightWritten" />

        <TextView
            android:id="@+id/textViewTrainingYearsWritten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/textViewTrainingYears"
            app:layout_constraintTop_toBottomOf="@+id/textViewTrainingYears" />

        <TextView
            android:id="@+id/textViewPointsWritten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/points"
            app:layout_constraintStart_toStartOf="@+id/textViewPoints"
            app:layout_constraintTop_toBottomOf="@+id/textViewPoints" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>